# trapir-api

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: img.rs  mod.rs
src/img/: mod.rs  resize.rs  types.rs
